@@ -1,3 +1,7 @@
+2006-02-08  Phil Muldoon  <pmuldoon@redhat.com>
+
+	* srcwin/SourceWindow.java: Revert i8n.
+
 2006-02-03  Adam Jocksch  <ajocksch@redhat.com>
 
 	* CodeItem.java: Removed, merged contents into Variable.java.
